# MacOS-Pixel-Engine-v0.1.0

./: .gitignore  BUILD_SUMMARY.md  CHANGES.md  CMakeLists.txt  Makefile  MaterialList.md  OPTIMIZATION_GUIDE.md  QUICK_START.md  README.md
include/: DiscoverySystem.h  GameMode.h  Material.h  MetalRenderer.h  Platform.h  Simulation.h  Types.h  World.h
resources/: AppIcon.icns
shaders/: shader.metal
src/: DiscoverySystem.cpp  Material.cpp  MetalRenderer.mm  Platform.mm  Simulation.cpp  World.cpp  main.cpp
